connecting all the pages with div

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>Contact</h1>  
+  <h1>Contact</h1> 
+  <div>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="index.html">Home</a>
+</div>
 </body>
 </html>
