--- a/about.html
+++ b/about.html
@@ -8,5 +8,10 @@
 </head>
 <body>
   <h1>About</h1>  
+  <div>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="index.html">Home</a>
+</div>
 </body>
 </html>
