--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
   <h1>Home</h1>  
+  <div>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+      <a href="index.html">Home</a>
+  </div>
 </body>
 </html>
 
