--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body>
   <h1>Home</h1>  
   <div>
-      <a href="about.html">About</a>
+      <a href="index.html">About</a>
       <a href="contact.html">Contact</a>
-      <a href="index.html">Home</a>
+      <a href="about.html">Home</a>
   </div>
 </body>
+
+
+<img src="C:\Users\ep0759317\OneDrive - Ozarks Technical Community College\Pictures\Camera Roll" alt="">
+
 </html>
 
