--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
 <body>
   <h1>Contact</h1> 
   <div>
-    <a href="about.html">About</a>
+    <a href="index.html">About</a>
     <a href="contact.html">Contact</a>
-    <a href="index.html">Home</a>
+    <a href="about.html">Home</a>
 </div>
 
 
