adding table and list

--- a/about.html
+++ b/about.html
@@ -9,9 +9,16 @@
 <body>
   <h1>About</h1>  
   <div>
-    <a href="index.html">About</a>
+    <a href="index.html">Home</a>
     <a href="contact.html">Contact</a>
-    <a href="about.html">Home</a>
+    <a href="about.html">About</a>
 </div>
+
+<img src="https://images.vans.com/is/image/Vans/8G1R1Q-HERO " alt="">
+
+<h4>Your Shoe Info Center</h4>
+
+<p>Here at Shoes we have what you need.<br>
+Get to know what you like.</p>
 </body>
 </html>
