--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
   <h1>Home</h1>  
   <div>
-      <a href="index.html">About</a>
+      <a href="index.html">Home</a>
       <a href="contact.html">Contact</a>
-      <a href="about.html">Home</a>
+      <a href="about.html">About</a>
   </div>
+  
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbFLmcPKMHLYVoyBmWrbrham97eh7bQ-eVYQ&usqp=CAU " alt="">
+<p>Do you need a shoe fix?   We got it!</p>
 </body>
 
-
-<img src="C:\Users\ep0759317\OneDrive - Ozarks Technical Community College\Pictures\Camera Roll" alt="">
 
 </html>
 
